# polarspike

./: Extractors.py  Loading_spikes.ipynb  Opsins.py  Overview.py  README.md  Rec_UI.py  backbone.py  bayesian.py  binarizer.py  cells_and_stimuli.py  chirps.py  clustering.py  clustering_fff.py  colour_template.py  correct_SC_files.py  debugger.py  df_filter.py  df_legacy.py  filter_stimulus.py  grid.py  group_pca.py  heatmaps.py  histograms.py  loading_example_schroeder.py  main.py  moving_bars.py  plotly_templates.py  pyproject.toml  quality_tests.py  recording_analysis_example.ipynb  recording_overview.py  single_cell_plots.py  spiketrain_plots.py  spiketrains.py  stim_colour_df  stimulus_dfs.py  stimulus_spikes.py  stimulus_trace.py  tuning_curves.py
analysis/: count_spikes.py  response_peaks.py
bugfixes_logs/: bugfixes_26.06.24.md
examples/: Loading_spikes.ipynb  data_revisit.ipynb  gui.ipynb  loading_spikes.py  multiple_recordings.ipynb  neuropixel_example.py  quality_index.ipynb  spiketrains_1.ipynb
notebooks/: frog_stimuli.ipynb
polarspike/: Extractors.py  Opsins.py  Overview.py  Rec_UI.py  bayesian.py  binarizer.py  colour_template.py  filter_stimulus.py  group_pca.py  gui_test.py  histograms.py  moving_bars.py  on_off.py  panel_debug.py  quality_tests.py  recording_overview.py  recordings_stimuli_cells.py  spiketrain_plots.py  stim_colour_df  stimulus_dfs.py  stimulus_spikes.py  stimulus_trace.py  tuning_curves.py  waveforms.py
polarspike/analysis/: count_spikes.py  response_peaks.py
scripts/: bayesian_changepoint.py  bayesian_changepoint_parallel.py  binarizer_debug.py  channel_comparison.py  chicken_absorption_plot.py  chirp_correlation.py  chirp_correlation_old.py  chirp_results.py  chirps.py  cluster_stats.py  clustering_all.py  clustering_recordings.py  clustering_recordings_cbd.py  clustering_recordings_george.py  colors.py  cone_contributions_box.py  correlation_plots.py  csteps.py  dendrogram_plotly.py  fff.py  fff_clustering.py  fff_crazy_feature_extr.py  fff_crazy_feature_extr_zf.py  fff_filtering.py  fff_neighbour_search.py  fff_no_oil.py  first_spike_analysis.py  first_spike_contrast_regression.py  first_spike_plotting.py  first_spike_vs_amplitude.py  heatmap_plots.py  isi_analysis_csteps.py  lasso_sensitivities.py  lasso_sensitivities_zf.py  matrix_transform.py  moving_bars_analysis.py  moving_bars_trigger_corr.py  oil_no_oil.py  on_off_index.py  on_off_index_corr.py  (+17 more)
