[tool.poetry]
name = "polarspike"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datashader = "^0.15.2"
h5py = "^3.9.0"
jupyterlab = "4.0.6"
notebook = "^7.0.4"
polars = "^0.19.3"
plotly = "^5.17.0"
ipywidgets = "^8.1.1"
panel = "^1.2.3"
sympy = "^1.12"
matplotlib = "^3.8.0"
pyarrow = "14.0.1"
holoviews = "^1.17.1"
ipympl = "^0.9.3"
spyking-circus = "^1.1.0"
zstandard = "^0.21.0"
tslearn = "^0.6.2"
seaborn = "^0.13.0"
param =  "1.13.0"
jupyter-bokeh = "^3.0.7"
statsmodels = "^0.14.0"
dask = "^2023.10.0"
cupy-cuda11x = "^12.2.0"
pingouin = "^0.5.3"
black = "^23.12.0"
nbconvert = "^7.14.0"
networkx = "^3.2.1"
hdf5plugin = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
