[project]
name = "polarspike"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.12"
authors = [{ name = "Marvin Seifert", email = "m.seifert@gmx.de" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
datashader = "^0.15.2"
h5py = "^3.9.0"
jupyterlab = "4.0.6"
notebook = "^7.0.4"
polars = "==1.31.0"
plotly = "^5.17.0"
ipywidgets = "^8.1.1"
panel = "^1.2.3"
sympy = "^1.12"
matplotlib = "^3.8.0"
pyarrow = "14.0.1"
holoviews = "^1.17.1"
ipympl = "^0.9.3"
zstandard = "^0.21.0"
tslearn = "^0.6.2"
seaborn = "^0.13.0"
param = "1.13.0"
jupyter-bokeh = "^3.0.7"
statsmodels = "^0.14.0"
dask = "^2023.10.0"
cupy-cuda11x = "^12.2.0"
pingouin = "^0.5.3"
black = "^23.12.0"
nbconvert = "^7.14.0"
networkx = "^3.2.1"
hdf5plugin = "^4.3.0"
scikit-image = "^0.22.0"
cmocean = "^3.1.3"
matplotlib-scalebar = "^0.8.1"
selenium = "^4.19.0"
ipywidgets-bokeh = "^1.6.0"
pywavelets = "^1.7.0"
ipyvizzu-story = "0.2.1"
sporco = "^0.2.1"
spyking-circus = "^1.1.0"
pyqt5 = "^5.15.11"
imodels = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
